--- a/main.css
+++ b/main.css
@@ -22,9 +22,10 @@ body {
 h1 {
 
   margin-top: 98px;
-  margin-bottom: 0;
-  font-weight: 500;
-  /* font-size: 28px; */
+  margin-bottom: 32px;
+  font-weight: 700;
+  font-size: 46px;
+  line-height: 1.15;
 
 }
 
@@ -73,7 +74,7 @@ p {
   /* border-top: 4px solid rgba(255,255,255,0.77); */
   transition: background-color 0.3s;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.05);
-  margin-bottom: 24px;
+  margin-bottom: 16px;
   display: flex;
   flex-direction: column;
 }
