--- a/main.css
+++ b/main.css
@@ -15,13 +15,14 @@ body {
   padding: 0;
   font-family: 'Quicksand', sans-serif;
   color: #fff;
+
 }
 
 /* Fonts installed: 400, 500, 700 */
 
 h1 {
 
-  margin-top: 98px;
+  margin-top: 32px;
   margin-bottom: 32px;
   font-weight: 700;
   font-size: 46px;
@@ -60,10 +61,15 @@ p {
 
 }
 
-#subhead {
+/* #subhead {
 
   margin-bottom: 32px;
   margin-top: 8px;
+} */
+
+.main {
+
+  max-width: 672px;
 }
 
 .card {
@@ -77,11 +83,16 @@ p {
   margin-bottom: 16px;
   display: flex;
   flex-direction: column;
+  transition: transform 0.08s ease;
+  transition: box-shadow 0.1s ease;
+  cursor: pointer;
 }
 
 .card:hover {
 
 /* background-color: rgba(255,255,255,0.25); */
+transform: scale(1.01);
+box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 
 }
 
@@ -113,4 +124,21 @@ time {
   font-size: 12px;
   font-weight: 500;
 
+}
+
+@media screen and (min-width: 600px) {
+
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  }
+
+h1 {
+
+  align-self: flex-start;
+  margin-right: 16px;
+  margin-top: 0;
+}
 }
