--- a/main.css
+++ b/main.css
@@ -93,6 +93,7 @@ p {
 /* background-color: rgba(255,255,255,0.25); */
 transform: scale(1.01);
 box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+/* Explore hover shadow as permanent shadow depth/visibility */
 
 }
 
@@ -141,4 +142,29 @@ h1 {
   margin-right: 16px;
   margin-top: 0;
 }
+}
+
+@media screen and (min-width: 886px) {
+
+
+.main {
+
+  display: flex;
+  flex-wrap: wrap;
+
+}
+
+.card {
+
+  width: 280px;
+
+
+}
+
+.card:nth-of-type(odd) {
+
+margin-right: 16px;
+
+}
+
 }
