--- a/main.css
+++ b/main.css
@@ -125,8 +125,35 @@ main {
 /* background-color: rgba(255,255,255,0.25); */
 transform: scale(1.01);
 box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+background-color: #FF5B7C;
+border-top: 4px solid rgba(256,256,256,0.7);
+color: #fff;
 /* Explore hover shadow as permanent shadow depth/visibility */
 
+}
+
+#cursor-anim {
+
+opacity: 0.2;
+/* animation: fade 1.1s 3.3; */
+animation: fade 1.1s infinite;
+
+
+}
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+
+  60% {
+    opacity: 0.2;
+
+  }
+
+  100% {
+    opacity: 0;
+  }
 }
 
 .white {
