--- a/main.css
+++ b/main.css
@@ -109,7 +109,6 @@ main {
   /* background-color: rgba(255,255,255,0.05); */
   border-radius: 4px;
   /* border-top: 4px solid rgba(255,255,255,0.77); */
-  transition: background-color 0.3s;
   /* box-shadow: 0 2px 4px 0 rgba(0,0,0,0.05); */
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   margin-bottom: 8px;
@@ -123,7 +122,7 @@ main {
 .card:hover {
 
 /* background-color: rgba(255,255,255,0.25); */
-transform: scale(1.01);
+/* transform: scale(1.01); */
 box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 background-color: #FF5B7C;
 border-top: 4px solid rgba(256,256,256,0.7);
@@ -158,6 +157,7 @@ animation: fade 1.1s infinite;
 .white {
 
   background-color: #fff;
+  transition: background-color 0.1s;
   border-top: 4px solid #FF5B7C;
   color: #E04866;
 }
@@ -191,7 +191,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  margin-top: 11.2%;
+  /* height: 100vh; */
   }
 
 h1 {
